Footer Collapse in Landscape Phone Fixed

--- a/pages/knowledge.css
+++ b/pages/knowledge.css
@@ -603,7 +603,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
     height: 45px;
   }
 
@@ -786,7 +786,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
     height: 50px;
     width: 101vw;
   }
@@ -964,7 +964,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer{
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
   footer p {
@@ -1055,7 +1055,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
   footer p {
