--- a/pages/project.css
+++ b/pages/project.css
@@ -603,7 +603,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
     height: 45px;
   }
 
@@ -786,7 +786,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
     height: 50px;
     width: 101vw;
   }
@@ -948,7 +948,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
   footer p {
@@ -1039,7 +1039,7 @@ footer p {
 
   /* FOOTER STYLE */
   footer {
-    margin-top: 30px;
+    margin-top: 50px;
   }
 
   footer p {
